# VariousTauriTools

./: README.md
tauri-plugin-demos/: package.json  pnpm-lock.yaml  vite.config.ts
tauri-plugin-demos/src/: main.tsx
tauri-plugin-demos/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-demos/src-tauri/capabilities/: default.json
tauri-plugin-demos/src-tauri/src/: lib.rs  main.rs
tauri-plugin-demos/src/components/: CardComps.tsx
tauri-plugin-demos/src/layouts/: Body.tsx  Header.tsx  HeaderBar.tsx  MenuList.tsx  SideBar.tsx
tauri-plugin-demos/src/route/: ErrorPage.tsx  SplashPage.tsx  index.ts
tauri-plugin-demos/src/styles/: ThemeProvider.tsx  index.css
tauri-plugin-demos/src/views/: CmdView.tsx  CrudView.tsx  FileView.tsx  HomeView.tsx  NoticeView.tsx  RequestView.tsx  SystemInfoView.tsx  ToolsView.tsx
tiny-mcu-helper/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tiny-mcu-helper/src/: main.tsx
tiny-mcu-helper/src-tauri/: Cargo.toml  tauri.conf.json
tiny-mcu-helper/src-tauri/capabilities/: default.json
tiny-mcu-helper/src-tauri/icons/: icon.icns
tiny-mcu-helper/src-tauri/src/: lib.rs  main.rs
tiny-mcu-helper/src-tauri/src/db/: db_todo.rs  mod.rs
tiny-mcu-helper/src-tauri/src/functions/: fun_file_convert.rs  mod.rs
tiny-mcu-helper/src-tauri/src/launcher/: launcher_logger.rs  launcher_menu.rs  launcher_system_tray.rs  mod.rs
tiny-mcu-helper/src-tauri/src/plugins/: mod.rs  plugin_cmd.rs  plugin_fs.rs  plugin_store.rs  plugin_system_info.rs
tiny-mcu-helper/src-tauri/src/utils/: mod.rs  util_crypto.rs  util_lifecycle.rs
(+36 files in other folders)
