[package]
name = "tiny-mcu-helper"
version = "1.0.0"
description = "MCU Helper made by Tauri"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_libsaaa` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tiny_mcu_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"]  }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri-plugin-store = "2.0.0"
tokio = "1.47.1"
tauri-plugin-shell = "2.3.1"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
tauri-plugin-system-info = "2.0.9"
tauri-plugin-notification = "2.3.1"
tauri-plugin-log = "2.7.0"

tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"], default-features = false }

